# rust-source-engine

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rustdoc.yml
examples/blank/: Cargo.toml  blank.vdf
examples/blank-plugin/: Cargo.toml
examples/blank/src/: lib.rs
examples/client/: Cargo.toml
examples/client/src/: lib.rs
examples/console/: Cargo.toml  console.vdf
examples/console/src/: lib.rs
examples/filesystem/: Cargo.toml
examples/filesystem/src/: lib.rs
examples/repeated-load/: Cargo.toml
examples/repeated-load/src/: lib.rs
rse-client/: Cargo.toml
rse-client/src/: lib.rs
rse-client/src/cppdef/: engine_client.rs  material.rs  mod.rs
rse-client/src/cppdef/input/: mod.rs  steam_controller.rs
rse-client/src/interfaces/: engine_client.rs  mod.rs
rse-convar/: Cargo.toml
rse-convar-std/: Cargo.toml
rse-convar-std/src/: lib.rs  variable.rs
rse-convar/src/: command.rs  invocation.rs  lib.rs  util.rs  wrappers.rs
rse-convar/src/command/: generic.rs  invocation.rs  macros.rs  mod.rs  suggestions.rs
rse-convar/src/command/low/: mod.rs  object.rs  suggestion_count.rs  suggestions.rs
rse-convar/src/console_base/: convert.rs  ext.rs  flags.rs  mod.rs  registrable.rs  wrapper.rs
rse-convar/src/cppdef/: command.rs  con_command.rs  con_command_base.rs  con_var.rs  fcvar.rs  flags.rs  mod.rs
rse-convar/src/variable/: ext.rs  generic.rs  get_value.rs  macros.rs  mod.rs  params.rs
rse-convar/src/variable/low/: macros.rs  mod.rs  object.rs  object_static.rs  params.rs  wrapper.rs
rse-cpp/: Cargo.toml
rse-cpp/src/: c_str.rs  flag_utils.rs  lib.rs  ptr_compat.rs  transparent_wrappers.rs  vt_object_convert.rs  vt_object_wrapper.rs  vtable_macros.rs  with_vtable.rs
rse-cpp/src/type_info/: gcc.rs  mod.rs
rse-game/: Cargo.toml
rse-game-interfaces/: Cargo.toml
rse-game-interfaces/src/: cvar.rs  engine_server.rs  event.rs  event_listener.rs  event_manager.rs  file_system.rs  game_event.rs  interface_factories.rs  lib.rs  player_info.rs  server_game_dll.rs
rse-game-interfaces/src/cppdef/: cvar.rs  file_system.rs  game_dll_interfaces.rs  game_events.rs  mod.rs  player_info.rs  server_game_dll.rs
rse-game-interfaces/src/cvar/: mod.rs  registered.rs
rse-game-interfaces/src/file_system/: base.rs
rse-game/src/: datatable.rs  engine_server.rs  interface_factories.rs  lib.rs  server_edict.rs
rse-game/src/cppdef/: app_system.rs  color.rs  cvar.rs  game_dll_interfaces.rs  game_events.rs  global_vars.rs  math.rs  (+11 more)
rse-interface/: Cargo.toml
rse-interface/src/: cppdef.rs  dll_interface_factory.rs  interface.rs  lib.rs  vtable_interface.rs
rse-math/: Cargo.toml
rse-math/src/: aligned.rs  color.rs  color32.rs  lib.rs  matrix.rs  plane.rs  qangle.rs  surf_info.rs  vector.rs  vmatrix.rs  vplane.rs
rse-plugin/: Cargo.toml
rse-plugin/src/: cppdef.rs  factories.rs  lib.rs  loadable_plugin.rs  macros.rs  plugin.rs  reject_reason.rs  static_plugin.rs
rse-printf/: Cargo.toml
rse-printf/src/: byte_char.rs  char_printf.rs  lib.rs  precision.rs
rse-scratch-pad/: Cargo.toml
rse-scratch-pad/src/: lib.rs  vert_list.rs
rse-server-plugin/: Cargo.toml
rse-server-plugin/src/: cppdef.rs  dll_plugin.rs  lib.rs  loadable_plugin.rs  macros.rs  plugin.rs  reject_reason.rs  static_plugin.rs
rse-shared/: Cargo.toml
rse-shared/src/: server_edict.rs
rse-shared/src/cppdef/: buffer.rs  client_textmessage.rs  con_notify.rs  crc32.rs  mod.rs  net_channel_info.rs  player_info.rs  sound_level.rs  stats.rs  string.rs
rse-shared/src/cppdef/entities/: mod.rs
rse-shared/src/datatable/: mod.rs  send.rs  sprop_flags.rs
rse-sound/: Cargo.toml
rse-std/: Cargo.toml
rse-std-macros/: Cargo.toml
rse-std-macros/src/: cvar_value.rs  darling_helpers.rs  infallible_c_string.rs  lib.rs
rse-std/src/: alloc.rs  atomic.rs  c_buffer.rs  c_strings.rs  cl.rs  env.rs  ffi.rs  fs_consts.rs  futex.rs  interfaces.rs  io.rs  lib.rs  macros.rs  panicking.rs  server.rs  sv.rs  threads.rs  variable.rs
rse-std/src/command/: mod.rs  object.rs  wrapper.rs
rse-std/src/con/: mod.rs
rse-std/src/con/cmd/: dynamic.rs  mod.rs
rse-std/src/con/cmd/generic/: mod.rs  wrapper.rs
rse-std/src/con/cvar/: mod.rs
rse-std/src/con/var/: dynamic.rs  get_value.rs  mod.rs  typed.rs
rse-std/src/con/var/generic/: mod.rs  wrapper.rs
rse-std/src/console/: mod.rs
rse-std/src/console/cmd/: dynamic.rs
rse-std/src/console/cmd/generic/: mod.rs  wrapper.rs
rse-std/src/console/cvar/: dll_id.rs  mod.rs
rse-std/src/console/var/: dynamic.rs  get_value.rs  mod.rs  typed.rs
rse-std/src/console/var/generic/: mod.rs  wrapper.rs
rse-std/src/cvar/: dll_id.rs  lock.rs  mod.rs
rse-std/src/fs/: file.rs  mod.rs
rse-std/src/plugin/: adapter.rs  mod.rs  plugin_trait.rs
rse-std/src/variable/: mod.rs  object.rs  wrapper.rs
rse-tier0/: Cargo.toml  build.rs
rse-tier0-log/: Cargo.toml
rse-tier0-log/src/: lib.rs
rse-tier0-print/: Cargo.toml
rse-tier0-print/src/: color_provider.rs  colored.rs  lib.rs  macros.rs  newlined.rs  plain.rs  printing.rs  then.rs
rse-tier0-text/: Cargo.toml
rse-tier0-text/src/: lib.rs  loggable.rs
rse-tier0/src/: c_format.rs  cmd.rs  errors.rs  fmt_adapters.rs  level.rs  lib.rs  linked.rs  mem.rs  mem_alloc.rs  spew.rs  traits.rs
rse-tier0/src/linked/: cppdef.rs  errors.rs  macros.rs  mem.rs  mod.rs  spew.rs
rse-tier0/src/linked/cmd/: cppdef.rs  mod.rs
rse-tier0/src/linked/mem/: cppdef.rs  mod.rs
rse-tier0/src/linked/spew/: cppdef.rs  mod.rs
rse-utl/: Cargo.toml
rse-utl/src/: lib.rs  string.rs  util.rs  vector.rs
rse-utl/src/cppdef/: memory.rs  mod.rs  vector.rs
rse-utl/src/memory/: any_memory.rs  grow_size.rs  mod.rs  slice.rs  tier0.rs
rse-utl/src/memory/tier0/: growable.rs  mod.rs  token.rs
test-plugin/: Cargo.toml
test-plugin/src/: lib.rs  std_handlers.rs
test-server-plugin/: Cargo.toml  test.vdf
test-server-plugin/src/: lib.rs  std_handlers.rs
test-static-plugin/: Cargo.toml  test_static.vdf
test-static-plugin/src/: lib.rs
test-std-plugin/: Cargo.toml
test-std-plugin/src/: lib.rs
(+17 files in other folders)
