[workspace]
resolver = "3"
members = [
	"rse-cpp",
	"rse-utl",
	"rse-interface",
	"rse-convar",
	"rse-math",
	"rse-scratch-pad",
	"rse-game",
	"rse-game-interfaces",
	"rse-tier0",
	"rse-plugin",
	"test-plugin",
]

[workspace.package]
authors = ["b0mbie"]

[workspace.dependencies]
libc = { version = "0.2.175", default-features = false }

cppdvt = { git = "https://github.com/b0mbie/cppdvt.git" }
printf = { git = "https://github.com/b0mbie/printf-rs.git" }

rse-convar = { path = "./rse-convar" }
rse-cpp = { path = "./rse-cpp" }
rse-interface = { path = "./rse-interface" }
rse-game = { path = "./rse-game" }
rse-game-interfaces = { path = "./rse-game-interfaces" }
rse-math = { path = "./rse-math" }
rse-plugin = { path = "./rse-plugin" }
rse-scratch-pad = { path = "./rse-scratch-pad" }
rse-utl = { path = "./rse-utl" }
