[workspace]
resolver = "3"
members = [
	"rse-cpp",
	"rse-utl",
	"rse-interface",
	"rse-convar",
	"rse-math",
	"rse-scratch-pad",
	"rse-game",
	"rse-game-interfaces",
	"rse-tier0",
	"rse-plugin",
	"test-plugin",
	"test-static-plugin",
	"rse-std-macros",
	"rse-std",
	"test-std-plugin",
]

[workspace.package]
authors = ["b0mbie"]

[workspace.dependencies]
cppdvt = { git = "https://github.com/b0mbie/cppdvt.git" }
printf = { git = "https://github.com/b0mbie/printf-rs.git" }

rse-convar = { path = "./rse-convar" }
rse-cpp = { path = "./rse-cpp" }
rse-interface = { path = "./rse-interface" }
rse-game = { path = "./rse-game" }
rse-game-interfaces = { path = "./rse-game-interfaces" }
rse-math = { path = "./rse-math" }
rse-plugin = { path = "./rse-plugin" }
rse-scratch-pad = { path = "./rse-scratch-pad" }
rse-std = { path = "./rse-std" }
rse-tier0 = { path = "./rse-tier0" }
rse-utl = { path = "./rse-utl" }

atomic-wait = "1.1.0"

[workspace.dependencies.libc]
version = "0.2.177"
default-features = false

[workspace.dependencies.thiserror]
version = "2.0.16"
default-features = false

[workspace.dependencies.atomic]
version = "0.6.1"
default-features = false

[workspace.dependencies.bitflags]
version = "2.10.0"
default-features = false
