[package]
name = "rse-game-interfaces"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[features]
xbox360 = ["rse-utl/xbox360"]

[dependencies]
libc.workspace = true
rse-convar.workspace = true
rse-cpp.workspace = true
rse-shared.workspace = true
rse-interface.workspace = true
rse-math.workspace = true
rse-scratch-pad.workspace = true

[dependencies.rse-utl]
workspace = true
