[package]
name = "rse-shared"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[features]
# Equivalent to the `REPLAY_ENABLED` define.
replay = []
datatable-supports-int64 = []

[dependencies]
rse-convar.workspace = true
rse-cpp.workspace = true
rse-interface.workspace = true
rse-math.workspace = true
rse-utl.workspace = true
