[package]
name = "rse-std"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[features]
default = [
	"macros",
	"global-allocator",
	"sv",
	"fs",
]
link-srv = ["rse-tier0/link-srv"]
link-optional = ["rse-tier0/link-optional"]
doc = ["link-optional"]
macros = ["dep:rse-std-macros"]
global-allocator = []

sv = []
fs = []

[dependencies]
atomic-wait.workspace = true
atomic.workspace = true
libc.workspace = true
thiserror.workspace = true
rse-convar.workspace = true
rse-shared.workspace = true
rse-game-interfaces.workspace = true
rse-interface.workspace = true
rse-plugin.workspace = true
rse-utl.workspace = true

[dependencies.rse-std-macros]
path = "../rse-std-macros"
optional = true

[dependencies.rse-tier0]
path = "../rse-tier0"
default-features = false
features = ["link-dll"]
