[package]
name = "rse-tier0-print"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[features]
default = ["link-dll"]
link-dll = ["rse-tier0/link-dll"]
link-srv = ["rse-tier0/link-srv"]
doc = ["rse-tier0/doc"]
link-optional = ["rse-tier0/link-optional"]

[dependencies]
rse-tier0 = { path = "../rse-tier0", default-features = false }
