[package]
name = "rse-tier0"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[features]
default = ["link-dll"]
link-dll = ["dep:printf"]
link-srv = []
doc = ["link-optional"]
link-optional = []

# Equivalent to `_MEMTEST`.
memtest = []

[dependencies]
printf = { git = "https://github.com/b0mbie/printf-rs.git", optional = true }
rse-cpp.workspace = true
rse-game.workspace = true
