[package]
name = "test-plugin"
version = "0.1.0"
edition = "2024"
publish = false

[features]
link-srv = ["rse-tier0/link-srv"]

[lib]
name = "test"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
printf.workspace = true
rse-plugin.workspace = true
rse-tier0 = { path = "../rse-tier0", default-features = false }
