[package]
name = "test-server-plugin"
version = "0.1.0"
edition = "2024"
publish = false

[features]
link-srv = ["rse-tier0-print/link-srv"]

[lib]
name = "test"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
printf.workspace = true
rse-server-plugin.workspace = true
rse-tier0-print = { path = "../rse-tier0-print", default-features = false }
