[package]
name = "test-static-plugin"
version = "0.1.0"
edition = "2024"
publish = false

[features]
link-srv = ["rse-tier0/link-srv"]

[lib]
name = "test_static"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
rse-convar.workspace = true
rse-plugin.workspace = true

[dependencies.atomic]
version = "0.6.1"
default-features = false

[dependencies.rse-tier0]
path = "../rse-tier0"
default-features = false
