[package]
name = "test-static-plugin"
version = "0.1.0"
edition = "2024"
publish = false

[features]
link-srv = ["rse-tier0/link-srv"]

[lib]
name = "test_static"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
atomic.workspace = true
rse-convar.workspace = true
rse-plugin.workspace = true
rse-tier0.workspace = true
